--- a/p5-a.in
+++ b/p5-a.in
@@ -9,6 +9,21 @@ assign(stats,none).
 % binary relation: P(x,y) := x direct sum y
 % binary relation: Q(x,y) := x direct product y
 % binary relation: R(x,y) := x \unlhd y
+% binary relation: H(x,y) : Heyting algebra
+% binary relation: E(x,y) : x \approx y (x=y)
+
+formulas(assumptions).
+all x R(x,x)
+all x all y (R(x,y) & R(y,x) -> E(x,y))
+all x all y all z (R(x,y) & R(y,z) -> R(x,z))
+all x ($F -> x)
+all x (x -> $T)
+all x all y all z (R(P(x,y),z) <-> (R(x,z) & R(y,z)))
+all x all y all z (R(z,P(x,y)) <-> (R(z,x) & R(z,y)))
+
+all x all y all z E(Q(x, P(y,z)), P(Q(x,y), Q(x,z)))
+all x all y all z E(P(x, P(y,z)), Q(P(x,y), P(x,z)))
+end_of_list.
 
 formulas(goals).
 all x exists y ((P(x,y) <-> $T) & (Q(x, y) <-> $F))
