--- a/p5-e.in
+++ b/p5-e.in
@@ -9,7 +9,6 @@ assign(stats,none).
 % binary relation: P(x,y) := x direct sum y
 % binary relation: Q(x,y) := x direct product y
 % binary relation: R(x,y) := x \unlhd y
-% L := Lattice 
 % binary relation: E(x,y) : x \approx y (x=y)
 
 
@@ -28,7 +27,7 @@ all x all y all z E(Q(x, P(y,z)), P(Q(x,y), Q(x,z)))
 all x all y all z E(P(x, P(y,z)), Q(P(x,y), P(x,z)))
 
 
-all x exist y exists z (E(x, -y) & E(x, -z))
+all x exist y exists z (E(-x, y) & E(-x, z))
 end_of_lists.
 
 formulas(goals).
